# frankenmermaid

./: .gitignore  CHANGELOG.md  CRATES_IO_PUBLISHING.md  Cargo.toml  EXISTING_FRANKENTUI_MERMAID_STRUCTURE.md  FEATURE_PARITY.md  PLAN_TO_PORT_FRANKENTUI_MERMAID_TO_RUST.md  PROPOSED_ARCHITECTURE.md  README.md  build-wasm.sh  frankenmermaid_demo_showcase.html  install.sh  update_evidence.rs  wrangler.jsonc
.beads/: issues.jsonl
.beads/.br_history/: issues.20260312_111658_909449329.jsonl  issues.20260312_112050_316942540.jsonl
.ci/: quality-gates.toml
.github/workflows/: ci.yml  pages.yml
crates/fm-cli/: Cargo.toml
crates/fm-cli/src/: main.rs
crates/fm-cli/tests/: benchmark_regression_harness.rs  config_roundtrip_test.rs  corpus_ingestion.rs  debug_test.rs  fnx_baseline_invariants.rs  fnx_capability_checks.rs  fnx_differential_report.rs  fnx_directed_rollout_gate.rs  fnx_e2e_scenarios.rs  frankentui_conformance_cases.json  frankentui_conformance_test.rs  golden_layout_test.rs  golden_svg_test.rs  integration_test.rs  mermaid_compat_test.rs  phase1_rollout_gate.rs  test_tree_overflow.rs
crates/fm-cli/tests/fixtures/frankentui_conformance/: COVERAGE.md  DISCREPANCIES.md  PROVENANCE.md  block_beta_nested_groups.mmd  c4component_basic.mmd  c4container_basic.mmd  c4deployment_basic.mmd  c4dynamic_basic.mmd  class_inheritance.mmd  click_callback_tooltip.mmd  click_link_tooltip.mmd  er_relationships.mmd  flowchart_subgraph.mmd  gantt_project.mmd  gitgraph_basic.mmd  journey_user.mmd  mindmap_basic.mmd  pie_chart.mmd  sankey_links.mmd  sequence_basic.mmd  sequence_fragments.mmd  sequence_notes.mmd  timeline_events.mmd  xychart_axes_series.mmd
crates/fm-cli/tests/golden/: all_edge_types.mmd  all_node_shapes.mmd  architecture_basic.mmd  block_basic.mmd  c4_basic.mmd  cycle_braid.mmd  cycle_feedback.mmd  cycle_ladder.mmd  cycle_scc_heavy.mmd  dense_flowchart_stress.mmd  er_basic.mmd  flowchart_classdef.mmd  fuzzy_keyword_recovery.mmd  journey_basic.mmd  kanban_basic.mmd  layout_checksums.json  mindmap_basic.mmd  packet_basic.mmd  quadrant_basic.mmd  requirement_basic.mmd  sankey_basic.mmd  sequence_advanced.mmd  single_node.mmd  state_composite.mmd  stress_120_nodes.mmd  timeline_basic.mmd  xychart_basic.mmd
crates/fm-core/: Cargo.toml
crates/fm-core/src/: art.rs  cga.rs  epoch.rs  font_metrics.rs  lib.rs  quotient_filter.rs  succinct.rs
crates/fm-layout/: Cargo.toml
crates/fm-layout/benches/: crossing_minimization.rs
crates/fm-layout/src/: adapton.rs  cache_oblivious.rs  egraph_crossing.rs  egraph_ordering.rs  fnx_budget.rs  fnx_cycle_scorer.rs  fnx_directed.rs  fnx_ordering.rs  lib.rs  persistence.rs  shapes.rs  spatial.rs
crates/fm-parser/: Cargo.toml
crates/fm-parser/src/: dot_parser.rs  ir_builder.rs  lib.rs  mermaid_parser.rs
crates/fm-regression-harness/: Cargo.toml
crates/fm-regression-harness/src/: main.rs
crates/fm-render-canvas/: Cargo.toml
crates/fm-render-canvas/src/: context.rs  renderer.rs  shapes.rs  viewport.rs
crates/fm-render-svg/: Cargo.toml
crates/fm-render-svg/src/: a11y.rs  attributes.rs  cga_transform.rs  defs.rs  document.rs  element.rs  lib.rs  path.rs  theme.rs  transform.rs
crates/fm-render-term/: Cargo.toml
crates/fm-render-term/src/: ascii.rs  config.rs  diff.rs  lib.rs  minimap.rs  renderer.rs
crates/fm-wasm/: Cargo.toml
crates/fm-wasm/src/: lib.rs
docs/: FNX_COMPATIBILITY_MATRIX.md  FNX_INTEGRATION.md  FNX_PHASE2_ROLLOUT.md  FNX_USER_GUIDE.md
docs/examples/: fnx_compare.sh  fnx_doc_validate.sh
evidence/: capability_matrix.json  capability_scenario_matrix.json  demo_resilience_fixture_suite.json  demo_strategy.md  pattern_inventory.md
evidence/contracts/: fnx-deterministic-decision-contract.md  showcase_react_embedding_contract.md  showcase_shared_core_contract.md  showcase_static_entrypoint_contract.md  showcase_test_taxonomy_and_logging_schema.md
evidence/ledger/: README.md  bidirectional-lenses.toml  conformal-geometric-algebra.toml  constraint-programming-layout.toml  egraph-crossing-min.toml  fnx-deterministic-decision-contract.toml  incremental-subgraph-relayout.toml  swiss-tables-node-edge-maps.toml
evidence/runs/web/bd-2u0.5.11.2/showcase-harness/: 2026-03-29T01-50-09Z__integration__log.json
evidence/runs/web/bd-2u0.5.11.3/: 2026-03-29T02-07-53Z__determinism__summary.json  README.md
evidence/runs/web/bd-2u0.5.11.3/static-web-compare-export/desktop-default/: 2026-03-29T02-07-10Z__e2e__html.html  2026-03-29T02-07-10Z__e2e__log.json  2026-03-29T02-07-12Z__e2e__html.html  2026-03-29T02-07-12Z__e2e__log.json  2026-03-29T02-07-14Z__e2e__html.html  2026-03-29T02-07-14Z__e2e__log.json  2026-03-29T02-07-16Z__e2e__html.html  2026-03-29T02-07-16Z__e2e__log.json  2026-03-29T02-07-17Z__e2e__html.html  (+1 more)
evidence/runs/web/bd-2u0.5.6.2/: 2026-03-29T22-35-54Z__determinism__summary.json  README.md
evidence/runs/web/bd-2u0.5.6.3/: 2026-03-29T23-54-01Z__determinism__summary.json  README.md
evidence/runs/web/bd-2u0.5.6.3/showcase-accessibility/: 2026-03-29T23-51-00Z__evidence__log.json
evidence/runs/web/bd-2u0.5.6.4/: 2026-03-30T00-05-24Z__determinism__summary.json  README.md
evidence/runs/web/bd-2u0.5.6.4/showcase-compatibility/: 2026-03-30T00-05-00Z__evidence__log.json
evidence/runs/web/bd-2u0.5.7.1/: 2026-03-30T02-16-26Z__determinism__summary.json  README.md
evidence/runs/web/bd-2u0.5.8.2.2/static-web-entrypoint/: 2026-03-29T01-43-37Z__evidence__log.json
evidence/runs/web/bd-2u0.5.8.2.3/: README.md
evidence/runs/web/bd-2u0.5.8.2.3/static-web-compare-export/: 2026-03-29T01-55-58Z__e2e__html.html  2026-03-29T01-55-58Z__e2e__log.json
evidence/runs/web/bd-2u0.5.8.2.3/static-web-diagnostics-recovery/: 2026-03-29T01-55-59Z__e2e__html.html  2026-03-29T01-55-59Z__e2e__log.json
pkg/: frankenmermaid.d.ts  frankenmermaid.js  frankenmermaid_bg.wasm  frankenmermaid_bg.wasm.d.ts  package.json
scripts/: cloudflare_pages_ops.py  run_static_web_e2e.py  showcase_harness.py
tests/: test_cloudflare_pages_ops.py  test_showcase_harness.py  test_static_web_e2e.py
web/: _headers
web_react/: _headers
(+128 files in other folders)
