[package]
name = "fm-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "FrankenMermaid CLI - render and validate Mermaid diagrams"

[[bin]]
name = "fm-cli"
path = "src/main.rs"

[[bin]]
name = "evidence"
path = "src/bin/evidence.rs"

[features]
default = []
# Optional features for extended functionality
watch = ["dep:notify"]
serve = ["dep:tiny_http"]
png = ["dep:resvg", "dep:usvg"]
fnx-integration = ["fm-layout/fnx-integration"]
fnx-experimental-directed = ["fm-layout/fnx-experimental-directed"]

[dependencies]
anyhow.workspace = true
clap.workspace = true
fm-core.workspace = true
fm-layout.workspace = true
fm-parser.workspace = true
fm-render-svg.workspace = true
fm-render-term.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2 = "0.10.9"
toml = "0.8.23"
tracing.workspace = true
tracing-subscriber.workspace = true

# Optional dependencies
notify = { version = "8.2", optional = true }
tiny_http = { version = "0.12", optional = true }
resvg = { version = "0.47", optional = true, default-features = false }
usvg = { version = "0.47", optional = true, default-features = false }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.25"

[[bench]]
name = "pipeline_bench"
harness = false
