[package]
name = "frankenmermaid-cli"
description = "CLI tool for parsing, validating, and rendering Mermaid diagrams"
keywords = ["cli", "mermaid", "diagram", "svg", "render"]
categories = ["command-line-utilities", "visualization"]
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true

[[bin]]
name = "frankenmermaid"
path = "src/main.rs"

# Keep fm-cli as alias for backwards compatibility during transition
[[bin]]
name = "fm-cli"
path = "src/main.rs"

[[bin]]
name = "evidence"
path = "src/bin/evidence.rs"

[features]
default = []
# Optional features for extended functionality
watch = ["dep:notify"]
serve = ["dep:tiny_http"]
png = ["dep:resvg", "dep:usvg"]
fnx-integration = ["fm-layout/fnx-integration"]
fnx-experimental-directed = ["fm-layout/fnx-experimental-directed"]

[dependencies]
anyhow.workspace = true
clap.workspace = true
crossterm = "0.28.1"
fm-core.workspace = true
fm-layout.workspace = true
fm-parser.workspace = true
fm-render-svg.workspace = true
fm-render-term.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9.34"
sha2 = "0.10.9"
time = { version = "0.3.41", features = ["formatting", "parsing"] }
toml = "0.8.23"
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt", "json"] }

# Optional dependencies
notify = { version = "8.2", optional = true }
tiny_http = { version = "0.12", optional = true }
resvg = { version = "0.47", optional = true, default-features = false }
usvg = { version = "0.47", optional = true, default-features = false }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.25"

[[bench]]
name = "pipeline_bench"
harness = false
