[package]
name = "fm-layout"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = []
fnx-integration = [
    "dep:fnx-runtime",
    "dep:fnx-classes",
    "dep:fnx-algorithms",
    "dep:fnx-views",
]
fnx-experimental-directed = ["fnx-integration"]

[dependencies]
fm-core.workspace = true
nalgebra.workspace = true
tracing.workspace = true
fnx-runtime = { workspace = true, optional = true }
fnx-classes = { workspace = true, optional = true }
fnx-algorithms = { workspace = true, optional = true }
fnx-views = { workspace = true, optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
good_lp = { workspace = true, features = ["highs"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tracing = { workspace = true, features = ["release_max_level_off"] }

[dev-dependencies]
proptest = "1.6.0"
serde_json = "1.0"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "incremental_layout"
harness = false
