[package]
name = "fm-parser"
description = "Mermaid-compatible diagram parser with best-effort recovery and DOT bridge"
keywords = ["mermaid", "parser", "diagram", "dot", "graphviz"]
categories = ["parsing", "visualization"]
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
fm-core.workspace = true
serde.workspace = true
serde_json.workspace = true
unicode-segmentation = "1.12.0"
json5 = "1.3.1"
chumsky.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
serde_yaml = "0.9.34"

[dev-dependencies]
proptest = "1.6.0"
