[package]
name = "fm-regression-harness"
description = "Internal regression testing harness for FrankenMermaid (not published)"
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
fm-core.workspace = true
fm-parser.workspace = true
fm-layout.workspace = true
fm-render-svg.workspace = true
