[package]
name = "fm-render-svg"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
fm-core.workspace = true
fm-layout.workspace = true
serde_json.workspace = true

[dev-dependencies]
fm-parser.workspace = true
proptest = "1.6.0"
