[package]
name = "fm-render-svg"
description = "Zero-dependency SVG renderer for FrankenMermaid diagram IR"
keywords = ["svg", "render", "diagram", "mermaid", "graphics"]
categories = ["rendering::graphics-api", "visualization"]
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
fm-core.workspace = true
fm-layout.workspace = true
serde_json.workspace = true

[dev-dependencies]
fm-parser.workspace = true
proptest = "1.6.0"
