[package]
name = "fm-render-term"
description = "Terminal/TUI renderer for FrankenMermaid diagram IR"
keywords = ["terminal", "tui", "render", "diagram", "mermaid"]
categories = ["command-line-interface", "visualization"]
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
fm-core.workspace = true
fm-layout.workspace = true
serde.workspace = true

[dev-dependencies]
fm-parser.workspace = true
proptest = "1.6.0"
