[package]
name = "fm-wasm"
description = "Rust-first Mermaid-compatible diagram engine for WebAssembly and browser rendering"
repository = "https://github.com/Dicklesworthstone/frankenmermaid"
homepage = "https://github.com/Dicklesworthstone/frankenmermaid"
keywords = ["mermaid", "diagram", "wasm", "svg", "canvas"]
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
fnx-integration = ["fm-layout/fnx-integration"]
fnx-experimental-directed = ["fm-layout/fnx-experimental-directed"]

[dependencies]
fm-core.workspace = true
fm-layout.workspace = true
fm-parser.workspace = true
fm-render-canvas.workspace = true
fm-render-svg.workspace = true
js-sys.workspace = true
serde.workspace = true
serde-wasm-bindgen.workspace = true
wasm-bindgen.workspace = true
web-sys.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
serde_json.workspace = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
